--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -324,9 +324,6 @@ Use `.button` minimalist look (no default button borders or shadings).
 }
 
 /*
-TODO: Refactoring needed, button presentation more clearly (like in Yelp Styleguide)
-http://stackoverflow.com/a/12198561/2659424
-
 * `.default-button` gives the basic button coloring (pressed and disabled states)
 
 ```markup
@@ -340,6 +337,8 @@ http://stackoverflow.com/a/12198561/2659424
 </ul>
 ```
 */
+// TODO: Refactoring needed, button presentation more clearly (like in Yelp Styleguide)
+// http://stackoverflow.com/a/12198561/2659424
 button.default-button {
   color: white;
   & {
@@ -407,9 +406,8 @@ Use `.vertical-buttons` to make buttons align in a vertical column
 
 /*
 Basic checkbox
-
-TODO: write example when icons are working with styleguide
 */
+// TODO: write example when icons are working with styleguideodo
 // Make labels also clickable
 label {
   cursor: pointer;
