--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -28,55 +28,6 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-pencil:before {
-	content: "\e60e";
-}
-
-.icon-x:before {
-	content: "\e60d";
-}
-
-.icon-tasks:before {
-	content: "\e600";
-}
-.icon-selection-empty {
-	content: "\e601";
-}
-.icon-selection-checked {
-	content: "\e602";
-}
-.icon-plus:before {
-	content: "\e603";
-}
-.icon-notes:before {
-	content: "\e604";
-}
-.icon-menu:before {
-	content: "\e605";
-}
-.icon-logo-with-text:before {
-	content: "\e606";
-}
-.icon-logo-only:before{
-	content: "\e607";
-}
-.icon-inbox:before {
-	content: "\e608";
-}
-.icon-i:before {
-	content: "\e609";
-}
-.icon-home:before {
-	content: "\e60a";
-}
-.icon-arrow-right:before {
-	content: "\e60b";
-}
-
-.icon-arrow-left:before {
-	content: "\e60c";
-}
-
 // em specific tweaks
 [class^="icon-"], [class*=" icon-"] {
   font-size: @icon-size;
@@ -114,3 +65,61 @@ span.icon-i, span.icon-logo-only {
 span.icon-i:active, span.icon-logo-only:active {
   color: @highlighted-element-pressed;
 }
+
+// CODE BELOW FROM ICOMOON (MIGHT GET OVERWRITED, DON'T ADD ANYTHING THERE)
+
+.icon-eye:before {
+  content: "\e602";
+}
+.icon-pencil:before {
+  content: "\e603";
+}
+.icon-x:before {
+  content: "\e604";
+}
+.icon-arrow-left:before {
+  content: "\e605";
+}
+.icon-arrow-right:before {
+  content: "\e606";
+}
+.icon-home:before {
+  content: "\e607";
+}
+.icon-i:before {
+  content: "\e608";
+}
+.icon-inbox:before {
+  content: "\e609";
+}
+.icon-logo-only:before {
+  content: "\e60a";
+}
+.icon-logo-with-text:before {
+  content: "\e60b";
+}
+.icon-menu:before {
+  content: "\e60c";
+}
+.icon-notes:before {
+  content: "\e60d";
+}
+.icon-plus:before {
+  content: "\e60e";
+}
+.icon-selection-checked:before {
+  content: "\e60f";
+}
+.icon-selection-empty:before {
+  content: "\e610";
+}
+.icon-tasks:before {
+  content: "\e611";
+}
+.icon-triangle-down:before {
+  content: "\e600";
+}
+.icon-triangle-right:before {
+  content: "\e601";
+}
+
