--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -66,6 +66,14 @@ span.icon-i:active, span.icon-logo-only:active {
   color: @highlighted-element-pressed;
 }
 
+// CHECK THIS IF ICOMOON FONT FILES GET UPDATED
+.icon-selection-empty {
+  content: "\e610";
+}
+.icon-selection-checked {
+  content: "\e60f";
+}
+
 // CODE BELOW FROM ICOMOON (MIGHT GET OVERWRITED, DON'T ADD ANYTHING THERE)
 
 .icon-eye:before {
