--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -413,6 +413,13 @@ footer {
   }
 }
 
+.omnibar-drawer {
+  position: absolute;
+  right: 0;
+  width: 100%;
+  max-width: @one-column-grid-width;
+}
+
 .omnibar-animation.ng-enter, .omnibar-animation.ng-leave {
   position: absolute;
   left: 0;
