--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -105,7 +105,7 @@ html {
   height: 100%;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
-  body, div#root-container, div#root, div#feature-container-wrapper, .no-slides-container, .slides-container, section.one-column-grid, section.two-column-grid, .column {
+  body, div#root-container, div#root, div#main, div#feature-container-wrapper, .no-slides-container, .slides-container, section.one-column-grid, section.two-column-grid, .column {
     height: inherit;
     overflow: hidden;
   }
