Position omnibar drawer correctly on large screen.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -329,6 +329,10 @@ header {
       max-height: @maximum-landscape-height;
       margin-top: -@maximum-landscape-height / 2;
     }
+    .omnibar-drawer {
+      margin-top: -@maximum-landscape-height / 2;
+      top: 50%;
+    }
   }
 }
 
