started colors styleguiding

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -11,7 +11,6 @@ Imports normalize.less for making browsers render all elements more consistently
 */
 
 // Text colors
-
 @content: black;
 @content-pressed: lighten(@content, 20%);
 @content-heading: black;
@@ -31,7 +30,6 @@ Imports normalize.less for making browsers render all elements more consistently
 @highlighted-element-pressed: darken(@highlighted-element, 20%);
 
 // Button colors
-
 @normal-button: #0f82fe;
 @normal-button-hover: darken(@normal-button, 10%);
 @normal-button-pressed: darken(@normal-button, 20%);
@@ -192,3 +190,21 @@ html {
 }
 
 @slide-indicator-width: 0.5em;
+
+/*
+# Colors
+
+Text colors
+```markup
+<span style="text-color:black">content: black</span>;
+<span style="text-color:black">content: black</span>;@content-pressed: lighten(@content, 20%);
+@content-heading: black;
+@content-heading-pressed: lighten(@content-heading, 20%);
+@logo: #3b3b3b;
+@icon: #999999;
+@separator: #dadada;
+@instruction: #70c041;
+@warning: #e22c09;
+@menu: #363636;
+```
+*/
