--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -12,6 +12,7 @@ Imports normalize.less for making browsers render all elements more consistently
 
 // Text colors
 @content: black;
+@content-pressed: lighten(@content, 20%);
 @content-heading: black;
 @content-heading-pressed: lighten(@content-heading, 20%);
 @logo: #3b3b3b;
@@ -68,6 +69,10 @@ Imports normalize.less for making browsers render all elements more consistently
 
 .content {
   color: @content;
+}
+
+a.content:active {
+  color: @content-pressed;
 }
 
 .dashboard-info {
