Animate content resize and positioning when drawer menu is opened. Currently not working in other swipers than tasks swiper and other than webkit browsers. * toggleUnstickyMenu function in MenuController * moved drawer menu code from rootViewDirective to featureContainerDirective * added few helper function to SnapService * setWrapperTranslate and resizeFixSwiperAndChildSwipers public functions in SwiperService

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -521,6 +521,14 @@ footer {
 #feature-container-wrapper {
   position: relative;
   background-color: white;
+  // NOTE: transition correspond with Snap.js drawer animation transition
+  #feature-container {
+    -webkit-transition: max-width .2s ease;
+    -moz-transition: max-width .2s ease;
+    -o-transition: max-width .2s ease;
+    -ms-transition: max-width .2s ease;
+    -transition: max-width .2s ease;
+  }
 }
 
 /* # DATEPICKER */
