comment improvement, every section is preceded by 80 stars

--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -18,6 +18,7 @@ All forms and buttons used in extended mind UI. Imports following less libraries
 @icon-button-width: @plus-button-width;
 
 /*
+********************************************************************************
 # Forms
 */
 
@@ -177,8 +178,10 @@ Input on the left and button on the right OR checkbox on the left, input in the 
 }
 
 /*
+********************************************************************************
 # Buttons
 
+/*
 Basic buttons
 ```markup
 <div class="form-group button-container vertical-buttons">
@@ -460,7 +463,8 @@ input[type=date] {
 }
 
 /*
-## Selections
+********************************************************************************
+# Selections
 
 Basic select
 
