backdrop color darkened

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -108,7 +108,7 @@ TODO: working example needed!
 }
 
 .editable-field-backdrop.active {
-  background-color: #f6f6f6 !important;
+  background-color: #d0d0d0 !important;
   &.backdrop-disable * {
     pointer-events: none;
   }
