--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -89,8 +89,18 @@ TODO: working example needed!
   background: linear-gradient(to right, rgba(255, 255, 255, 0), white 75%, white);
 }
 
-// EDITABLE FIELD
 
+/*
+Backdrop for editable field
+
+TODO: working example needed!
+
+```markup
+<div class="editable-field-backdrop" style="height:100px">
+  <div class="inner-page-content-container" style="width=100px;height=50px">I'm highlighted</div>
+</div>
+```
+*/
 .editable-field-backdrop {
   -webkit-transition: background-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   -moz-transition: background-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
@@ -98,6 +108,11 @@ TODO: working example needed!
   -ms-transition: background-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   transition: background-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
+.editable-field-backdrop.active {
+  background-color: #d0d0d0 !important;
+  &.backdrop-disable * {
+    pointer-events: none;
+  }
 
 .onboarding-bubble:after {
   -webkit-transition: border-bottom-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
@@ -106,12 +121,6 @@ TODO: working example needed!
   -ms-transition: border-bottom-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   transition: border-bottom-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
-
-.editable-field-backdrop.active {
-  background-color: #d0d0d0 !important;
-  &.backdrop-disable * {
-    pointer-events: none;
-  }
 
   // In Android, scrolling is not possible form pointer-events:none, even though in iOS it is
   // TODO: The latter is for timeline.html where the section below inner-slide-content-container
