styleguide headings updated

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -1,6 +1,13 @@
 @import "foundation.less";
 
 /*
+
+<h1 class="main-heading">Animations</h1>
+
+The app animations are mostly fades between different colors and brightnesses.
+*/
+
+/*
 `.fade-fast` fades to new color in 0.25 seconds.
 
 ```markup
