--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -1,5 +1,12 @@
 @import "foundation.less";
 
+/*
+
+<h1 class="main-heading">Icons</h1>
+
+extended mind uses <a href="http://icomoon.io">Icomoon</a> to pack icons to font files. When updating the icons, make sure the character codes (e.g. "\e602") stays the same.
+*/
+
 @icon-size: 28px;
 @banner-logo-size: 70px;
 
