--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -6,12 +6,7 @@
 /*
 <h1 class="main-heading">Inputs</h1>
 
-All forms and buttons used in extended mind UI. Imports following less libraries:
-
-* foundation.less
-* icons.less
-* typography.less
-* layout.less
+All forms and buttons used in extended mind UI.
 */
 
 @plus-button-width: 27px;
