--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1,5 +1,12 @@
 @import "foundation.less";
 
+/*
+
+<h1 class="main-heading">Layout</h1>
+
+TODO: em grid structure explained in plain English
+*/
+
 // Columns
 @one-column-grid-width: 568px; // iPhone 5 landscape is still one column
 @two-column-grid-width: 720px;
