--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -3,7 +3,7 @@
 @import "layout.less";
 
 /*
-<h1>Links</h1>
+<h1 class="main-heading">Links</h1>
 
 Following navigation links are used. These shouldn't be used for actions!
 */
