--- a/frontend/core/src/main/webapp/static/less/notifications.less
+++ b/frontend/core/src/main/webapp/static/less/notifications.less
@@ -1,6 +1,13 @@
 @import "foundation.less";
 @import "layout.less";
 
+/*
+
+<h1 class="main-heading">Notifications</h1>
+
+Onboarding bubbles, modals and omnibar in-app notifications.
+*/
+
 @danger-text: @delete-button;
 @rounded-corner-radius: 15px;
 @max-modal-width: 400px;
