--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -4,7 +4,9 @@
 @import "inputs.less";
 
 /*
-Extended Mind specific UI-components.
+h1 class="main-heading">Widgets<h1>
+
+Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidemenu and omnibar.
 */
 
 section#welcome {
