--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -8,6 +8,32 @@ The app animations are mostly fades between different colors and brightnesses.
 */
 
 /*
+* Set gradient background to content when omnibar drawer is toggled.
+* Animation time should be shorter than speed paramer in Snap.js drawer.
+* Backgroung must be animated faster than anything else here because it seems to be a little laggy.
+*/
+
+// http://css-tricks.com/snippets/css/css-box-shadow/
+// http://jasonagross.com/animate-background-gradients-with-css3/
+#feature-container-wrapper {
+  -webkit-transition: box-shadow .2s, background-color .1s linear;
+  -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
+
+  // NOTE: transition correspond with Snap.js drawer animation transition
+  #feature-container {
+    -webkit-transition: max-width .2s ease;
+    -moz-transition: max-width .2s ease;
+    -o-transition: max-width .2s ease;
+    -ms-transition: max-width .2s ease;
+    -transition: max-width .2s ease;
+  }
+}
+#feature-container-wrapper.animating {
+  background-color: #dadada;
+  -webkit-box-shadow: inset -10px 0 10px -10px darken(#dadada, 20%);
+}
+
+/*
 `.fade-fast` fades to new color in 0.25 seconds.
 
 ```markup
