--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -8,29 +8,40 @@ The app animations are mostly fades between different colors and brightnesses.
 */
 
 /*
-* Set gradient background to content when omnibar drawer is toggled.
-* Animation time should be shorter than speed paramer in Snap.js drawer.
-* Backgroung must be animated faster than anything else here because it seems to be a little laggy.
+* Set fading background to content when omnibar drawer is toggled and max width when menu drawer is toggled.
+*
+* Animation time should be shorter than the speed paramer in Snap.js drawer.
+* Backgroung must be animated faster than Snap.js drawer because otherwise it seems to be a little laggy.
 */
 
-// http://css-tricks.com/snippets/css/css-box-shadow/
-// http://jasonagross.com/animate-background-gradients-with-css3/
 #feature-container-wrapper {
-  -webkit-transition: box-shadow .2s, background-color .1s linear;
-  -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
+  -webkit-transition: all .3s ease; // this is needed so custom animations in child elements will work
+  background-color: white;
 
-  // NOTE: transition correspond with Snap.js drawer animation transition
+  // NOTE: transition correspond with Snap.js menu drawer animation transition
   #feature-container {
-    -webkit-transition: max-width .2s ease;
-    -moz-transition: max-width .2s ease;
-    -o-transition: max-width .2s ease;
-    -ms-transition: max-width .2s ease;
-    -transition: max-width .2s ease;
+    -webkit-transition: all .3s ease, max-width .2s ease;
+    -moz-transition: all .3s ease, max-width .2s ease;
+    -o-transition: all .3s ease, max-width .2s ease;
+    -ms-transition: all .3s ease, max-width .2s ease;
+    -transition: all .3s ease, max-width .2s ease;
   }
-}
-#feature-container-wrapper.animating {
-  background-color: #dadada;
-  -webkit-box-shadow: inset -10px 0 10px -10px darken(#dadada, 20%);
+  #feature-container.omnibar-opening {
+    -webkit-transition: background-color .3s linear;
+    -moz-transition: background-color .3s linear;
+    -o-transition: background-color .3s linear;
+    -ms-transition: background-color .3s linear;
+    -transition-transition: background-color .3s linear;
+    background-color: #dadada;
+  }
+  #feature-container.omnibar-closing {
+    -webkit-transition: background-color .2s linear;
+    -moz-transition: background-color .2s linear;
+    -o-transition: background-color .2s linear;
+    -ms-transition: background-color .2s linear;
+    -transition-transition: background-color .2s linear;
+    background-color: white;
+  }
 }
 
 /*
