Run $scope.$apply() on omnibar drawer animation end callback. Added link to omnibar animation comments.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -19,6 +19,7 @@ The app animations are mostly fades between different colors and brightnesses.
   background-color: white;
 
   // NOTE: transition correspond with Snap.js menu drawer animation transition
+  // http://stackoverflow.com/a/15138493
   #feature-container {
     -webkit-transition: all .3s ease, max-width .2s ease;
     -moz-transition: all .3s ease, max-width .2s ease;
