--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -15,32 +15,26 @@ The app animations are mostly fades between different colors and brightnesses.
 */
 
 #feature-container-wrapper {
-  -webkit-transition: all .3s ease; // this is needed so custom animations in child elements will work
   background-color: white;
 
   // NOTE: transition correspond with Snap.js menu drawer animation transition
   // http://stackoverflow.com/a/15138493
   #feature-container {
-    -webkit-transition: all .3s ease, max-width .2s ease;
-    -moz-transition: all .3s ease, max-width .2s ease;
-    -o-transition: all .3s ease, max-width .2s ease;
-    -ms-transition: all .3s ease, max-width .2s ease;
-    -transition: all .3s ease, max-width .2s ease;
+    -webkit-transition: max-width .2s ease;
+    -moz-transition: max-width .2s ease;
+    -o-transition: max-width .2s ease;
+    -ms-transition: max-width .2s ease;
+    -transition: max-width .2s ease;
   }
-  #feature-container.omnibar-opening {
-    -webkit-transition: background-color .3s linear;
-    -moz-transition: background-color .3s linear;
-    -o-transition: background-color .3s linear;
-    -ms-transition: background-color .3s linear;
-    -transition-transition: background-color .3s linear;
+  #feature-container.omnibar-visible, #feature-container.omnibar-hidden {
+    -webkit-transition: background-color .1s linear;
+    -moz-transition: background-color .1s linear;
+    -o-transition: background-color .1s linear;
+    -ms-transition: background-color .1s linear;
+    -transition: background-color .1s linear;
     background-color: #dadada;
   }
-  #feature-container.omnibar-closing {
-    -webkit-transition: background-color .2s linear;
-    -moz-transition: background-color .2s linear;
-    -o-transition: background-color .2s linear;
-    -ms-transition: background-color .2s linear;
-    -transition-transition: background-color .2s linear;
+  #feature-container.omnibar-hidden {
     background-color: white;
   }
 }
