styleguide: coding style added

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -26,12 +26,15 @@ Fonts in use:
 * {
   font-family: @font;
 }
+
 html {
   font-size: @default-font-size;
 }
 
+
 /*
-## Headings
+******************************************************************************
+# Headings
 ```markup
 <h1>h1</h1>
 <h2>h2</h2>
@@ -51,8 +54,10 @@ h1, h2, h3, h4 {
   padding-top: @vertical-grid-half;
 }
 
+
 /*
-## Inputs & links
+******************************************************************************
+# Inputs & links
 
 ```markup
 <a class="bold-title">.bold-title</a> <br/>
@@ -77,7 +82,7 @@ h3, .bold-title {
 }
 
 /*
-Inline font control:
+# Inline font control
 ```markup
 <p class="font-bold">.font-bold</p>
 <p class="font-small">.font-small</p>
