--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -84,6 +84,7 @@ a.content:active {
 // Foundation
 
 * {
+  // TODO: mitä tarkoittaa?
   // Use border box everywhere
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -101,7 +102,7 @@ a.content:active {
 }
 
 html {
-  // There is never any full page scrolling
+  // Always disable full page scrolling
   height: 100%;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
@@ -128,7 +129,7 @@ html {
 // Footer
 @footer-height: 60px;
 
-// SCREEN READERS
+// SCREEN READERS TODO: mitä tekee?
 .sr-only {
   position: absolute;
   width: 1px;
@@ -140,12 +141,12 @@ html {
   border: 0;
 }
 
-// SCROLLBARS
-
+// Always disable scrollbars
 ::-webkit-scrollbar {
   display: none;
 }
 
+//TODO ?
 @keyframes fade-in {
   from { opacity: 0; }
   to { opacity: 1; }
@@ -172,10 +173,13 @@ html {
   to { opacity: 0; }
 }
 
-// WORD BREAKING
-// http://kenneth.io/blog/2012/03/04/word-wrapping-hypernation-using-css/
-.break-words {
+/*
+# Word breaking
+source: http://kenneth.io/blog/2012/03/04/word-wrapping-hypernation-using-css/
 
+
+*/
+.break-words {
   word-wrap: break-word;
   -ms-word-break: break-all;
   word-break: break-all;
