--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -129,7 +129,12 @@ html {
 // Footer
 @footer-height: 60px;
 
-// SCREEN READERS TODO: mitä tekee?
+/* TODO: TO BE REMOVED
+- full search sr-only
+-> jos #id, niin uusi haku id:llä
+   (haku vain app ja less hakemistoista)
+
+*/
 .sr-only {
   position: absolute;
   width: 1px;
@@ -177,7 +182,7 @@ html {
 # Word breaking
 source: http://kenneth.io/blog/2012/03/04/word-wrapping-hypernation-using-css/
 
-
+```markup
 */
 .break-words {
   word-wrap: break-word;
