--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -167,6 +167,16 @@ TODO: working example needed!
   transition: border-bottom-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
 
+
+/*
+Editable field backdrop: blur the background when it's important to focus to an 
+
+TODO: working example needed!
+
+```markup
+<div></div>
+```
+*/
 .editable-field-backdrop.active {
   background-color: #d0d0d0 !important;
   &.backdrop-disable * {
