--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -155,6 +155,8 @@ html {
 source: http://kenneth.io/blog/2012/03/04/word-wrapping-hypernation-using-css/
 
 ```markup
+
+```
 */
 .break-words {
   word-wrap: break-word;
