--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -5,6 +5,8 @@
 <h1 class="main-heading">Icons</h1>
 
 extended mind uses <a href="http://icomoon.io">Icomoon</a> to pack icons to font files. When updating the icons, make sure the character codes (e.g. "\e602") stays the same.
+
+TODO: Icons are not working yet with Phytoplankton
 */
 
 @icon-size: 28px;
