--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -94,7 +94,8 @@ CSS should be written across multiple lines, except in very specific circumstanc
 # Meaningful whitespace
 * No whitespace between a (styleguide) comment and the related code block
 * One (1) empty line between closely related rulesets.
-* Two (2) empty lines between loosely related rulesets and new sections
+* Two (2) empty lines between loosely related rulesets
+* Three (3) empty lines before a new section
 
 For example
 ```
