--- a/frontend/core/src/main/webapp/static/less/notifications.less
+++ b/frontend/core/src/main/webapp/static/less/notifications.less
@@ -22,6 +22,15 @@ Onboarding bubbles, modals and omnibar in-app notifications.
 
 /*
 # Onboarding
+
+```markup
+<div class="onboarding-bubble ng-scope">
+  <div class="instruction-text">
+    <p>type here what you want to <b>remember</b>, we'll take care of the rest</p>
+  </div>
+</div>
+```
+
 */
 
 .onboarding-bubble {
@@ -61,6 +70,8 @@ Onboarding bubbles, modals and omnibar in-app notifications.
 
 /*
 # Modals
+
+TODO: Modals will be gone soon?
 */
 
 #policy-modal {
@@ -95,7 +106,11 @@ Onboarding bubbles, modals and omnibar in-app notifications.
   }
 }
 
-/* # OMNIBAR TOAST NOTIFICATION */
+/*
+# Toaster notification
+
+TODO: Example needed
+*/
 
 .toaster-notification {
   max-width: @one-column-grid-width;
