styleguide: widgets.less

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -4,11 +4,17 @@
 @import "inputs.less";
 
 /*
-h1 class="main-heading">Widgets<h1>
+<h1 class="main-heading">Widgets</h1>
 
 Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidemenu and omnibar.
 */
 
+
+/*
+*************************************************************
+# Section dependent 
+TODO: Examples needed
+*/
 section#welcome {
   max-width: 350px;
   .column {
@@ -64,7 +70,12 @@ section#signup {
   }
 }
 
-// TASKS TIMELINE
+
+/*
+*************************************************************
+# Tasks timeline
+TODO: Changes to focus?
+*/
 section#tasks-timeline {
   .date-heading {
     position: relative;
@@ -87,7 +98,11 @@ section#tasks-timeline {
   }
 }
 
-/* # ACCORDION */
+
+/*
+# Accordion
+TODO: Gets wiped?
+*/
 
 .accordion-item-active {
   padding-top: 5px;
@@ -156,8 +171,11 @@ div#closedAccordionTitleWrapper {
 }
 
 
-/* # EXCERPT
+/*
+*************************************************************
+# Excerpt
 (Previously known as "teaser")
+TODO: Example needed
 */
 
 .excerpt {
@@ -171,7 +189,11 @@ div#closedAccordionTitleWrapper {
 }
 
 
-/* # HEADER */
+/* 
+*************************************************************
+# Header 
+TODO: Example needed
+*/
 
 header.static-page-header {
   .active-item-container {
@@ -237,7 +259,12 @@ header.static-page-header {
   }
 }
 
-/* # FOOTER */
+
+/* 
+*************************************************************
+# Footer 
+TODO: Example needed
+*/
 
 footer {
   a[class^='active-slide'], a[class*=' active-slide'] {
@@ -287,7 +314,12 @@ footer {
   }
 }
 
-/* # OMNIBAR */
+
+/* 
+*************************************************************
+# Omnibar 
+TODO: Example needed
+*/
 
 .omnibar-container {
   width: 100%;
@@ -421,7 +453,12 @@ footer {
   max-width: @one-column-grid-width;
 }
 
-/* # MENU */
+
+/* 
+*************************************************************
+# Menu
+TODO: Example needed 
+*/
 
 .no-webkit-scrolling {
   -webkit-overflow-scrolling: auto;
@@ -504,7 +541,12 @@ footer {
   background-color: white;
 }
 
-/* # DATEPICKER */
+
+/* 
+*************************************************************
+# Datepicker
+TODO: Gets replaced with pikaday?
+ */
 
 li.datepicker-date {
   line-height: @vertical-grid-half;
@@ -595,7 +637,12 @@ li.datepicker-date {
   }
 }
 
-/* # PICK A DAY */
+
+/* 
+*************************************************************
+# Pick a day
+TODO: Example needed
+*/
 .pika-single {
   z-index: 9999;
   display: block;
@@ -832,6 +879,12 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 }
 
 /*
+*************************************************************
+# Swiper
+TODO: Do we need an example?
+*/
+
+/*
  * swiper 2.4.3
  * Mobile touch slider and framework with hardware accelerated transitions
  *
@@ -933,9 +986,11 @@ sizes, pagination, etc.
   /* Specific visible slide styling: */
 
 }
-/* ===============================================================
-Pagination Styles
-================================================================*/
+/* 
+*************************************************************
+# Pagination Styles
+// TODO: Example needed
+*/
 .swiper-pagination-switch {
   /* Stylize pagination button: */
 
@@ -998,8 +1053,6 @@ Pagination Styles
 @screen-lg-min: @screen-lg;
 @screen-lg-desktop: @screen-lg-min;
 
-// #################
-
 
 // #################
 // from Bootstrap mixins.less
@@ -1015,7 +1068,13 @@ Pagination Styles
       transition: transform @transition;
     }
 
-// Drop shadows
+
+/*
+*************************************************************
+# Drop shadows
+TODO: Do we need an example?
+*/
+
 //
 // Note: Deprecated `.box-shadow()` as of v3.1.0 since all of Bootstrap's
 //   supported browsers that have box shadow capabilities now support the
@@ -1033,11 +1092,12 @@ Pagination Styles
   filter: ~"alpha(opacity=@{opacity-ie})";
 }
 
-// #################
 
-//
-// Modals
-// --------------------------------------------------
+/*
+*************************************************************
+# Modals
+TODO: Gets wiped?
+*/
 
 // .modal-open      - body class for killing the scroll
 // .modal           - container to scroll within
